--- a/html/DeKTTK4.html
+++ b/html/DeKTTK4.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <div class="header_banner">
+        <div class="grid wide">
+            <h1>AUTUMN TRAVEL COMPANY</h1>
+        </div>
+    </div>
+    <nav>
+    <div class="menu">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Order</a></li>
+        </ul>
+        <div class="content_img">
+            <img src="/img/TK4.png" alt="">
+        </div>
+        <div class="">
+            <h3>Sign up for membership benefits</h3>
+            Our philosophical values are transparency, respect, for mality<br>
+            and responsibility. Our stimulus is your enthusiasm. Our<br>
+            motto is your satisfaction.
+        </div>
+        
+
+    </div>
+    </nav>
 </body>
 </html>
